added prev champ feature

--- a/sofifa/GDP_features.ipynb
+++ b/sofifa/GDP_features.ipynb
@@ -586,6 +586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hardcoded values from manual searching\n",
     "gdp_pp_scotland = 43740\n",
     "gdp_pp_wales = 24226\n",
     "gdp_pp_monaco = 168000\n",
@@ -1554,7 +1555,416 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>away_score</th>\n",
+       "      <th>tournament</th>\n",
+       "      <th>country</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>overall_diff</th>\n",
+       "      <th>attack_away_defence_home_diff</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cc_crossing_diff</th>\n",
+       "      <th>cc_passing_diff</th>\n",
+       "      <th>cc_shooting_diff</th>\n",
+       "      <th>d_aggresion_diff</th>\n",
+       "      <th>d_pressure_diff</th>\n",
+       "      <th>d_width_diff</th>\n",
+       "      <th>home_win</th>\n",
+       "      <th>gdp_diff</th>\n",
+       "      <th>is_home</th>\n",
+       "      <th>raw_gdp_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>2010-06-16 00:00:00+00:00</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FIFA World Cup</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-0.888649</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-44105.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806</th>\n",
+       "      <td>2010-06-29 00:00:00+00:00</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FIFA World Cup</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.310503</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8222.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1279</th>\n",
+       "      <td>2014-06-13 00:00:00+00:00</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>FIFA World Cup</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-0.565914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-22576.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1290</th>\n",
+       "      <td>2014-06-18 00:00:00+00:00</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FIFA World Cup</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>-24.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>15041.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      game_date home_team    away_team  home_score  \\\n",
+       "691   2010-06-16 00:00:00+00:00     Spain  Switzerland           0   \n",
+       "806   2010-06-29 00:00:00+00:00     Spain     Portugal           1   \n",
+       "1279  2014-06-13 00:00:00+00:00     Spain  Netherlands           1   \n",
+       "1290  2014-06-18 00:00:00+00:00     Spain        Chile           0   \n",
+       "\n",
+       "      away_score      tournament       country  neutral  overall_diff  \\\n",
+       "691            1  FIFA World Cup  South Africa     True           9.0   \n",
+       "806            0  FIFA World Cup  South Africa     True           3.0   \n",
+       "1279           5  FIFA World Cup        Brazil     True           6.0   \n",
+       "1290           2  FIFA World Cup        Brazil     True           9.0   \n",
+       "\n",
+       "      attack_away_defence_home_diff      ...       cc_crossing_diff  \\\n",
+       "691                            -8.0      ...                  -20.0   \n",
+       "806                            -5.0      ...                  -25.0   \n",
+       "1279                            1.0      ...                  -15.0   \n",
+       "1290                           -7.0      ...                  -13.0   \n",
+       "\n",
+       "      cc_passing_diff  cc_shooting_diff  d_aggresion_diff  d_pressure_diff  \\\n",
+       "691               3.0              -5.0             -15.0             15.0   \n",
+       "806              -0.0              -5.0               5.0             25.0   \n",
+       "1279            -14.0              17.0              -0.0            -11.0   \n",
+       "1290            -24.0               2.0               6.0              2.0   \n",
+       "\n",
+       "      d_width_diff  home_win  gdp_diff  is_home  raw_gdp_diff  \n",
+       "691           10.0        -1 -0.888649        0      -44105.0  \n",
+       "806            5.0         1  0.310503        0        8222.0  \n",
+       "1279           8.0        -1 -0.565914        0      -22576.0  \n",
+       "1290          10.0        -1  0.000000       -1       15041.0  \n",
+       "\n",
+       "[4 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.loc[(train['tournament'] == 'FIFA World Cup') & (train['home_team'] == 'Spain')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2006 Italy\n",
+    "# 2010 spain\n",
+    "# 2014 germany\n",
+    "# temp = train.loc[train['tournament'] == 'FIFA World Cup']\n",
+    "prev_champs = ['Italy','Spain']\n",
+    "years = [2010,2014]\n",
+    "prev_wc_champ = []\n",
+    "for date,tour,team1,team2 in zip(train['game_date'], train['tournament'],train['home_team'],train['away_team']):\n",
+    "    if tour != 'FIFA World Cup':\n",
+    "        prev_wc_champ.append(0)\n",
+    "    else:\n",
+    "        date_str = int(date.split('-')[0])\n",
+    "        val = 0\n",
+    "        for year,prev_champ in zip(years,prev_champs):\n",
+    "            if year == date_str:\n",
+    "                if team1 == prev_champ:\n",
+    "                    val = 1\n",
+    "                elif team2 == prev_champ:\n",
+    "                    val = -1        \n",
+    "        prev_wc_champ.append(val)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['prev_champ'] = prev_wc_champ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train.loc[train['prev_champ'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2018 \n",
+    "test_prev_champ = 'Germany'\n",
+    "\n",
+    "test_prev_wc_champ = []\n",
+    "for team1,team2 in zip(test['home_team'],test['away_team']):\n",
+    "    if team1 == test_prev_champ:\n",
+    "        test_prev_wc_champ.append(1)\n",
+    "    elif team2 == test_prev_champ:\n",
+    "        test_prev_wc_champ.append(-1)\n",
+    "    else:\n",
+    "        test_prev_wc_champ.append(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['prev_champ'] = test_prev_wc_champ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>away_score</th>\n",
+       "      <th>tournament</th>\n",
+       "      <th>country</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>overall_diff</th>\n",
+       "      <th>attack_away_defence_home_diff</th>\n",
+       "      <th>...</th>\n",
+       "      <th>d_aggresion_diff</th>\n",
+       "      <th>d_pressure_diff</th>\n",
+       "      <th>d_width_diff</th>\n",
+       "      <th>home_win</th>\n",
+       "      <th>home_win_no_pk</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>gdp_diff</th>\n",
+       "      <th>is_home</th>\n",
+       "      <th>raw_gdp_diff</th>\n",
+       "      <th>prev_champ</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FIFA World Cup</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>True</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37514.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FIFA World Cup</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>-0.195228</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-10248.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    game_date home_team away_team  home_score  away_score      tournament  \\\n",
+       "9         NaN   Germany    Mexico           0           1  FIFA World Cup   \n",
+       "28        NaN   Germany    Sweden           2           1  FIFA World Cup   \n",
+       "\n",
+       "   country  neutral  overall_diff  attack_away_defence_home_diff     ...      \\\n",
+       "9   Russia     True           7.0                           -5.0     ...       \n",
+       "28  Russia     True           9.0                           -7.0     ...       \n",
+       "\n",
+       "    d_aggresion_diff  d_pressure_diff  d_width_diff  home_win  home_win_no_pk  \\\n",
+       "9               -0.0             -2.0          20.0        -1              -1   \n",
+       "28              -5.0             -0.0          25.0         1               1   \n",
+       "\n",
+       "    Group  gdp_diff  is_home  raw_gdp_diff  prev_champ  \n",
+       "9       F  0.000000        1       37514.0           1  \n",
+       "28      F -0.195228        0      -10248.0           1  \n",
+       "\n",
+       "[2 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.loc[test['home_team'] == 'Germany']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +2003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
