--- a/models/test-model-score.ipynb
+++ b/models/test-model-score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from sklearn.cross_decomposition import PLSRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.cross_decomposition import PLSRegression\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "\n",
     "import matplotlib\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +119,24 @@
     "    score[\"Random Forest\"][\"Validation Score\"] = rf_mod.score(X_valid, y_valid)\n",
     "    score[\"Random Forest\"][\"Test Score\"] = rf_mod.score(X_test, y_test)\n",
     "    \n",
-    "    # get column names\n",
-    "    predictors = X_train.columns.values\n",
     "\n",
+    "    xgb_params = {\n",
+    "        'min_child_weight': [1, 5, 10],\n",
+    "        'gamma': [0.5, 1, 1.5, 2, 5],\n",
+    "        'subsample': [0.6, 0.8, 1.0],\n",
+    "        'colsample_bytree': [0.6, 0.8, 1.0],\n",
+    "        'max_depth': [3, 4, 5]\n",
+    "        }\n",
+    "    xgb_model = RandomizedSearchCV(estimator=XGBClassifier(objective='multi:softmax', num_class = 3), param_distributions=xgb_params,\\\n",
+    "                                       n_iter=50, scoring='accuracy', n_jobs=-1, cv=5, verbose=1).fit(X_train, y_train)\n",
+    "    score[\"XGBoost\"] = {}\n",
+    "    score[\"XGBoost\"]['model'] = xgb_model\n",
+    "    score[\"XGBoost\"][\"Train Score\"] = xgb_model.score(X_train, y_train)\n",
+    "    score[\"XGBoost\"][\"Validation Score\"] = xgb_model.score(X_valid, y_valid)\n",
+    "    score[\"XGBoost\"][\"Test Score\"] = xgb_model.score(X_test, y_test)\n",
+    "\n",
+    "\n",
+    "    \n",
     "    # PCA on data\n",
     "    pca = PCA().fit(X_train_scaled)\n",
     "    X_train_pca = pca.transform(X_train_scaled)\n",
@@ -282,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,8 +330,25 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   14.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:  1.0min\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    7.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   29.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   40.6s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   14.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:  1.1min\n",
       "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:  1.3min finished\n"
      ]
     }
@@ -327,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,65 +393,72 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.59375</td>\n",
-       "      <td>0.518787</td>\n",
-       "      <td>0.510526</td>\n",
+       "      <td>0.5625</td>\n",
+       "      <td>0.514832</td>\n",
+       "      <td>0.55</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LDA</th>\n",
-       "      <td>0.6875</td>\n",
-       "      <td>0.520765</td>\n",
-       "      <td>0.513158</td>\n",
+       "      <td>0.609375</td>\n",
+       "      <td>0.514173</td>\n",
+       "      <td>0.542105</td>\n",
        "      <td>LinearDiscriminantAnalysis(n_components=None, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>QDA</th>\n",
-       "      <td>0.359375</td>\n",
-       "      <td>0.492419</td>\n",
-       "      <td>0.436842</td>\n",
+       "      <td>0.546875</td>\n",
+       "      <td>0.526697</td>\n",
+       "      <td>0.444737</td>\n",
        "      <td>QuadraticDiscriminantAnalysis(priors=None, reg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.560976</td>\n",
-       "      <td>0.510526</td>\n",
+       "      <td>0.640625</td>\n",
+       "      <td>0.523401</td>\n",
+       "      <td>0.536842</td>\n",
+       "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBoost</th>\n",
+       "      <td>0.59375</td>\n",
+       "      <td>0.591958</td>\n",
+       "      <td>0.515789</td>\n",
        "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pcr_full</th>\n",
-       "      <td>0.6875</td>\n",
-       "      <td>0.522742</td>\n",
-       "      <td>0.507895</td>\n",
+       "      <td>0.671875</td>\n",
+       "      <td>0.511536</td>\n",
+       "      <td>0.534211</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pcr_80%</th>\n",
-       "      <td>0.640625</td>\n",
-       "      <td>0.518787</td>\n",
-       "      <td>0.505263</td>\n",
+       "      <td>0.65625</td>\n",
+       "      <td>0.507581</td>\n",
+       "      <td>0.552632</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pcr_90%</th>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.511536</td>\n",
-       "      <td>0.513158</td>\n",
+       "      <td>0.703125</td>\n",
+       "      <td>0.512195</td>\n",
+       "      <td>0.528947</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pcr_best</th>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.514832</td>\n",
-       "      <td>0.513158</td>\n",
+       "      <td>0.65625</td>\n",
+       "      <td>0.507581</td>\n",
+       "      <td>0.552632</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>plsda_best</th>\n",
-       "      <td>0.671875</td>\n",
-       "      <td>0.520765</td>\n",
-       "      <td>0.510526</td>\n",
+       "      <td>0.65625</td>\n",
+       "      <td>0.509558</td>\n",
+       "      <td>0.536842</td>\n",
        "      <td>PLSRegression(copy=True, max_iter=500, n_compo...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -427,21 +467,23 @@
       ],
       "text/plain": [
        "                    Test Score Train Score Validation Score  \\\n",
-       "Logistic Regression    0.59375    0.518787         0.510526   \n",
-       "LDA                     0.6875    0.520765         0.513158   \n",
-       "QDA                   0.359375    0.492419         0.436842   \n",
-       "Random Forest            0.625    0.560976         0.510526   \n",
-       "pcr_full                0.6875    0.522742         0.507895   \n",
-       "pcr_80%               0.640625    0.518787         0.505263   \n",
-       "pcr_90%                  0.625    0.511536         0.513158   \n",
-       "pcr_best                 0.625    0.514832         0.513158   \n",
-       "plsda_best            0.671875    0.520765         0.510526   \n",
+       "Logistic Regression     0.5625    0.514832             0.55   \n",
+       "LDA                   0.609375    0.514173         0.542105   \n",
+       "QDA                   0.546875    0.526697         0.444737   \n",
+       "Random Forest         0.640625    0.523401         0.536842   \n",
+       "XGBoost                0.59375    0.591958         0.515789   \n",
+       "pcr_full              0.671875    0.511536         0.534211   \n",
+       "pcr_80%                0.65625    0.507581         0.552632   \n",
+       "pcr_90%               0.703125    0.512195         0.528947   \n",
+       "pcr_best               0.65625    0.507581         0.552632   \n",
+       "plsda_best             0.65625    0.509558         0.536842   \n",
        "\n",
        "                                                                 model  \n",
        "Logistic Regression  LogisticRegressionCV(Cs=10, class_weight=None,...  \n",
        "LDA                  LinearDiscriminantAnalysis(n_components=None, ...  \n",
        "QDA                  QuadraticDiscriminantAnalysis(priors=None, reg...  \n",
        "Random Forest        RandomizedSearchCV(cv=5, error_score='raise-de...  \n",
+       "XGBoost              RandomizedSearchCV(cv=5, error_score='raise-de...  \n",
        "pcr_full             LogisticRegressionCV(Cs=10, class_weight=None,...  \n",
        "pcr_80%              LogisticRegressionCV(Cs=10, class_weight=None,...  \n",
        "pcr_90%              LogisticRegressionCV(Cs=10, class_weight=None,...  \n",
@@ -449,7 +491,7 @@
        "plsda_best           PLSRegression(copy=True, max_iter=500, n_compo...  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,13 +499,29 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ac209a]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ac209a-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
